<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="@string/cadastro_de_moradores"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="404dp"
                    android:backgroundTint="#2196F3"
                    android:onClick="NavFinanceiro"
                    android:text="@string/financeiro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/BtSair"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C13E3E"
                    android:onClick="Sair"
                    android:text="@string/Sair"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.871"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/Fotousuario"
                    android:layout_width="168dp"
                    android:layout_height="156dp"
                    app:layout_constraintBottom_toTopOf="@+id/button2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.274"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/todo" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="@string/cadastrar_apartamento"
                    app:layout_constraintBottom_toTopOf="@+id/BtSair"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/NomeUsuario"
                    android:layout_width="334dp"
                    android:layout_height="41dp"
                    app:layout_constraintBottom_toTopOf="@+id/button2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Fotousuario"
                    app:layout_constraintVertical_bias="0.211" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:ignore="SpeakableTextPresentCheck">


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>